images need to be altered

--- a/index.html
+++ b/index.html
@@ -43,80 +43,80 @@
 	</nav>
 
 	<div id="main-content" class="container-fluid">
-		<div class="container">
+		<div class="container" style="padding-top: 30px;">
 
 			<img src="images/premier-league-new-logo.jpg" class="img-fluid m-x-auto" alt="premier league logo" width="300px" height="300px">
 			
 
-			<div class="row">
+			<div class="row" style="padding-bottom: 30px;">
 				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/club logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/chelsea.svg" alt="chelsea logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/leicester.svg" alt="leicester logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-city.svg" alt="man city logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-utd.svg" alt="man utd logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
 
 				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/club logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/chelsea.svg" alt="chelsea logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/leicester.svg" alt="leicester logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-city.svg" alt="man city logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-utd.svg" alt="man utd logo" class="img-fluid">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/club logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/chelsea.svg" alt="chelsea logo" class="img-fluid">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/leicester.svg" alt="leicester logo" class="img-fluid">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-city.svg" alt="man city logo" class="img-fluid">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-utd.svg" alt="man utd logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
 
 				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/club logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/chelsea.svg" alt="chelsea logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/leicester.svg" alt="leicester logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-city.svg" alt="man city logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/club logos/man-utd.svg" alt="man utd logo" class="img-fluid">
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+				</div>
+
+				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+				</div>
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+				</div>
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+				</div>
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
+				</div>
+				<div class="col-xs-4 col-sm-3 col-lg-2 ">
+					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid">
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="footer" class="container-fluid" style="background-color: #38003c; height: 150px;">
+	<div id="footer" class="container-fluid" style="background-color: #38003c; padding: 20px;">
 		<div class="row text-center">
 
 			<div class="col-xs-6 col-md-3 col-lg-2">
