--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="container-fluid" style="background-color: #e90052; height: 120px;">
+	<div class="container-fluid" style="background-color: #00FF87; height: 120px;">
 		<div class="container">
 			<img src="images/header_logo.png" class="img-fluid" alt="Premier League" style="padding-top: 4px; max-width: 100%; min-height: 112px">
 		</div>
@@ -24,10 +24,10 @@
 		<div class="container collapse navbar-toggleable-sm" id="CollapsingNavbar">
 			<ul class="nav navbar-nav">
 				<li class="nav-item">
-					<a href="index.html" class="nav-link active">Home</a>
+					<a href="index.html" class="nav-link">Home</a>
 				</li>
 				<li class="nav-item">
-					<a href="table.html" class="nav-link">Table</a>
+					<a href="table.html" class="nav-link active">Table</a>
 				</li>
 				<li class="nav-item">
 					<a href="fixtures.html" class="nav-link">Fixtures</a>
@@ -44,82 +44,68 @@
 
 	<div id="main-content" class="container-fluid">
 		<div class="container" style="padding-top: 30px;">
+			<h2>League Table</h2>
 
-			<img src="images/premier-league-new-logo.jpg" class="img-fluid m-x-auto" alt="premier league logo" width="300px" height="300px">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Pos</th>
+						<th>Name</th>
+						<th>GP</th>
+						<th>W</th>
+						<th>D</th>
+						<th>L</th>
+						<th>GF</th>
+						<th>GA</th>
+						<th>GD</th>
+						<th>Pts</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">1</th>
+						<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span> Man City</td>
+						<td>3</td>
+						<td>3</td>
+						<td>0</td>
+						<td>0</td>
+						<td>9</td>
+						<td>3</td>
+						<td>6</td>
+						<td>9</td>
+					</tr>
+					<tr>
+						<th scope="row">2</th>
+						<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span> Chelsea</td>
+						<td>3</td>
+						<td>3</td>
+						<td>0</td>
+						<td>0</td>
+						<td>7</td>
+						<td>2</td>
+						<td>5</td>
+						<td>9</td>
+					</tr>
+					<tr>
+						<th scope="row">3</th>
+						<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span> Man Utd</td>
+						<td>3</td>
+						<td>3</td>
+						<td>0</td>
+						<td>0</td>
+						<td>6</td>
+						<td>1</td>
+						<td>5</td>
+						<td>9</td>
+					</tr>
+				</tbody>
+			</table>
 			
 
-			<div class="row" style="padding-bottom: 30px;">
-				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2 offset-lg-1">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2 ">
-					<img src="images/logos/man-city.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-				<div class="col-xs-4 col-sm-3 col-lg-2">
-					<img src="images/logos/man-utd.svg" alt="arsenal logo" class="img-fluid" style="width: 125px; height: 125px; ">
-				</div>
-
-			</div>
 		</div>
+			
 	</div>
+	
 
 	<div id="footer" class="container-fluid" style="background-color: #38003c; padding: 20px;">
 		<div class="row text-center">
