changes made to league table

--- a/fixtures.html
+++ b/fixtures.html
@@ -78,12 +78,12 @@
                             			</td>
                             		</tr>
                             		<tr>
-                            			<td class="text-center">
+                            			<td>
                             				<span>
                             					<img src="images/logos/chelsea.svg">
                             					<span>Chelsea</span>
                             				</span>
-                            				<span><strong>V</strong></span>
+                            				<span class="text-center"><strong>V</strong></span>
                             				<span>
                             					<span>Leicester City</span>
                             					<img src="images/logos/leicester.svg">
