--- a/table.html
+++ b/table.html
@@ -46,11 +46,12 @@
 		<div class="container" style="padding-top: 30px;">
 			<h2>League Table</h2>
 
-			<table class="table table-striped">
+			<div class="table-responsive">
+				<table class="table table-striped">
 				<thead>
 					<tr>
 						<th>Pos</th>
-						<th>Name</th>
+						<th>Team</th>
 						<th>GP</th>
 						<th>W</th>
 						<th>D</th>
@@ -64,7 +65,7 @@
 				<tbody>
 					<tr>
 						<th scope="row">1</th>
-						<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span> Man City</td>
+						<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span></td>
 						<td>3</td>
 						<td>3</td>
 						<td>0</td>
@@ -76,7 +77,7 @@
 					</tr>
 					<tr>
 						<th scope="row">2</th>
-						<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span> Chelsea</td>
+						<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span></td>
 						<td>3</td>
 						<td>3</td>
 						<td>0</td>
@@ -88,7 +89,7 @@
 					</tr>
 					<tr>
 						<th scope="row">3</th>
-						<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span> Man Utd</td>
+						<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span></td>
 						<td>3</td>
 						<td>3</td>
 						<td>0</td>
@@ -100,6 +101,8 @@
 					</tr>
 				</tbody>
 			</table>
+			</div>
+			
 			
 
 		</div>
