changes to navigation

--- a/table.html
+++ b/table.html
@@ -32,8 +32,14 @@
 				<li class="nav-item">
 					<a href="fixtures.html" class="nav-link">Fixtures</a>
 				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">Link 4</a>
+				<li class="nav-item" style="position: relative;">
+					<a href="#" class="nav-link dropdown-toggle" id="dropdownMenuLink" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
+
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="position: absolute; min-width: 250px;">
+						<a class="dropdown-item" href="#">Arsenal</a>
+					    <a class="dropdown-item" href="#">Bournemouth</a>
+					    <a class="dropdown-item" href="#">Burnley</a>
+					</div>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">Link 5</a>
@@ -44,63 +50,63 @@
 
 	<div id="main-content" class="container-fluid">
 		<div class="container" style="padding-top: 30px;">
-			<h2>League Table</h2>
+			<h2 style="padding-bottom: 30px;">League Table</h2>
 
 			<div class="table-responsive">
 				<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Pos</th>
-						<th>Team</th>
-						<th>GP</th>
-						<th>W</th>
-						<th>D</th>
-						<th>L</th>
-						<th>GF</th>
-						<th>GA</th>
-						<th>GD</th>
-						<th>Pts</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th scope="row">1</th>
-						<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span></td>
-						<td>3</td>
-						<td>3</td>
-						<td>0</td>
-						<td>0</td>
-						<td>9</td>
-						<td>3</td>
-						<td>6</td>
-						<td>9</td>
-					</tr>
-					<tr>
-						<th scope="row">2</th>
-						<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span></td>
-						<td>3</td>
-						<td>3</td>
-						<td>0</td>
-						<td>0</td>
-						<td>7</td>
-						<td>2</td>
-						<td>5</td>
-						<td>9</td>
-					</tr>
-					<tr>
-						<th scope="row">3</th>
-						<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span></td>
-						<td>3</td>
-						<td>3</td>
-						<td>0</td>
-						<td>0</td>
-						<td>6</td>
-						<td>1</td>
-						<td>5</td>
-						<td>9</td>
-					</tr>
-				</tbody>
-			</table>
+					<thead>
+						<tr>
+							<th>Pos</th>
+							<th>Team</th>
+							<th>GP</th>
+							<th>W</th>
+							<th>D</th>
+							<th>L</th>
+							<th>GF</th>
+							<th>GA</th>
+							<th>GD</th>
+							<th>Pts</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span></td>
+							<td>3</td>
+							<td>3</td>
+							<td>0</td>
+							<td>0</td>
+							<td>9</td>
+							<td>3</td>
+							<td>6</td>
+							<td>9</td>
+						</tr>
+						<tr>
+							<th scope="row">2</th>
+							<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span></td>
+							<td>3</td>
+							<td>3</td>
+							<td>0</td>
+							<td>0</td>
+							<td>7</td>
+							<td>2</td>
+							<td>5</td>
+							<td>9</td>
+						</tr>
+						<tr>
+							<th scope="row">3</th>
+							<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span></td>
+							<td>3</td>
+							<td>3</td>
+							<td>0</td>
+							<td>0</td>
+							<td>6</td>
+							<td>1</td>
+							<td>5</td>
+							<td>9</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 			
 			
