--- a/fixtures.html
+++ b/fixtures.html
@@ -32,8 +32,14 @@
 				<li class="nav-item"> 
 					<a href="fixtures.html" class="nav-link active">Fixtures</a>
 				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">Link 4</a>
+				<li class="nav-item" style="position: relative;">
+					<a href="#" class="nav-link dropdown-toggle" id="dropdownMenuLink" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
+
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="position: absolute;">
+						<a class="dropdown-item" href="#">Action</a>
+					    <a class="dropdown-item" href="#">Another action</a>
+					    <a class="dropdown-item" href="#">Something else here</a>
+					</div>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">Link 5</a>
@@ -44,7 +50,7 @@
 
 	<div id="main-content" class="container-fluid">
 		<div class="container" style="padding: 30px 0 30px 0;">
-			<h2>Fixtures</h2>
+			<h2 style="padding-bottom: 30px;">Fixtures</h2>
 
 
 			 <div class="panel-group" id="accordion">
