home page changed and fixture table updated

--- a/fixtures.html
+++ b/fixtures.html
@@ -35,10 +35,27 @@
 				<li class="nav-item" style="position: relative;">
 					<a href="#" class="nav-link dropdown-toggle" id="dropdownMenuLink" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
 
-					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="position: absolute;">
-						<a class="dropdown-item" href="#">Action</a>
-					    <a class="dropdown-item" href="#">Another action</a>
-					    <a class="dropdown-item" href="#">Something else here</a>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="position: absolute; min-width: 250px;">
+						<a class="dropdown-item" href="#">Arsenal</a>
+					    <a class="dropdown-item" href="#">Bournemouth</a>
+					    <a class="dropdown-item" href="#">Burnley</a>
+					    <a class="dropdown-item" href="#">Chelsea</a>
+					    <a class="dropdown-item" href="#">Crystal Palace</a>
+					    <a class="dropdown-item" href="#">Everton</a>
+					    <a class="dropdown-item" href="#">Hull City</a>
+					    <a class="dropdown-item" href="#">Leicester City</a>
+					    <a class="dropdown-item" href="#">Liverpool</a>
+					    <a class="dropdown-item" href="#">Man City</a>
+					    <a class="dropdown-item" href="#">Man Utd</a>
+					    <a class="dropdown-item" href="#">Middelsbrough</a>
+					    <a class="dropdown-item" href="#">Southampton</a>
+					    <a class="dropdown-item" href="#">Stoke City</a>
+					    <a class="dropdown-item" href="#">Sunderland</a>
+					    <a class="dropdown-item" href="#">Swansea</a>
+					    <a class="dropdown-item" href="#">Tottehnham</a>
+					    <a class="dropdown-item" href="#">Watford</a>
+					    <a class="dropdown-item" href="#">West Brom</a>
+					    <a class="dropdown-item" href="#">West Ham</a>
 					</div>
 				</li>
 				<li class="nav-item">
@@ -53,60 +70,81 @@
 			<h2 style="padding-bottom: 30px;">Fixtures</h2>
 
 
-			 <div class="panel-group" id="accordion">
+			 <div class="panel-group" id="accordion" style="border: 1px solid #38003c; border-radius: 4px;">
 
-                <div class="panel panel-default" style="padding: 5px; border-radius: 4px 4px 0 0; border-bottom: 1px solid #38003c; background-color: #e90052;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid #38003c;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#august" >
                         <h4 class="panel-title">
                             August
                         </h4>
                     </div>
                     <div id="august" class="panel-collapse collapse">
-                        <div class="panel-body">
+                        <div class="panel-body" style="background-color: white;">
                             <table class="table table-striped">
                             	<thead>
                             		<tr>
-                            			<th class="text-center">Aug 3<sup>rd</sup> 2016</th>
+                            			<th>Aug 3<sup>rd</sup> 2016</th>
                             		</tr>
                             	</thead>
                             	<tbody>
                             		<tr>
-                            			<td class="text-center">
-                            				<span>
-                            					<img src="images/logos/man-utd.svg">
-                            					<span>Man Utd</span>
-                            				</span>
-                            				<span><strong>V</strong></span>
-                            				<span>
-                            					<span>Man City</span>
-                            					<img src="images/logos/man-city.svg">
-                            				</span>
+                            			<td>
+	                            			<div style="width: 420px; margin: 0 auto;">
+	                            				<span class="text-right" id="team">
+	                            					<span>Man Utd</span>
+	                            					<img src="images/logos/man-utd.svg">
+	                            				</span>
+	                            				<span><strong>V</strong></span>
+	                            				<span id="team">
+	                            					<img src="images/logos/man-city.svg">
+	                            					<span>Man City</span>
+	                            				</span>
+	                            			</div>
                             			</td>
                             		</tr>
                             		<tr>
                             			<td>
-                            				<span>
-                            					<img src="images/logos/chelsea.svg">
-                            					<span>Chelsea</span>
-                            				</span>
-                            				<span class="text-center"><strong>V</strong></span>
-                            				<span>
-                            					<span>Leicester City</span>
-                            					<img src="images/logos/leicester.svg">
-                            				</span>
+                            				<div style="width: 420px; margin: 0 auto;">
+	                            				<span class="text-right" id="team">
+	                            					<span>Chelsea</span>
+	                            					<img src="images/logos/chelsea.svg">
+	                            				</span>
+	                            				<span><strong>V</strong></span>
+	                            				<span id="team">
+	                            					<img src="images/logos/leicester.svg">
+	                            					<span>Leicester City</span>
+	                            				</span>
+	                            			</div>
                             			</td>
                             		</tr>
                             		<tr>
-                            			<td class="text-center">
-                            				<span>
-                            					<img src="images/logos/man-utd.svg">
-                            					<span>Man Utd</span>
-                            				</span>
-                            				<span><strong>V</strong></span>
-                            				<span>
-                            					<span>Man City</span>
-                            					<img src="images/logos/man-city.svg">
-                            				</span>
+                            			<td>
+                            				<div style="width: 420px; margin: 0 auto;">
+	                            				<span class="text-right" id="team">
+	                            					<span>Burnley</span>
+	                            					<img src="images/logos/burnley.svg">
+	                            				</span>
+	                            				<span><strong>V</strong></span>
+	                            				<span id="team">
+	                            					<img src="images/logos/liverpool.svg">
+	                            					<span>Liverpool</span>
+	                            				</span>
+	                            			</div>
+                            			</td>
+                            		</tr>
+                            		<tr>
+                            			<td>
+                            				<div style="width: 420px; margin: 0 auto;">
+	                            				<span class="text-right" id="team">
+	                            					<span>Arsenal</span>
+	                            					<img src="images/logos/arsenal.svg">
+	                            				</span>
+	                            				<span><strong>V</strong></span>
+	                            				<span id="team">
+	                            					<img src="images/logos/spurs.svg">
+	                            					<span>Tottenham</span>
+	                            				</span>
+	                            			</div>
                             			</td>
                             		</tr>
                             	</tbody>
@@ -115,7 +153,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid #38003c; background-color: #00FF87;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid #38003c;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#september">
                         <h4 class="panel-title">
                             September
@@ -175,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #04f5ff;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#october">
                         <h4 class="panel-title">
                             October
@@ -235,7 +273,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #eaff04;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#november">
                         <h4 class="panel-title">
                             November
@@ -295,7 +333,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #e90052;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#december">
                         <h4 class="panel-title">
                             December
@@ -308,7 +346,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid #38003c; background-color: #00FF87;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid #38003c;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#january">
                         <h4 class="panel-title">
                             January
@@ -321,7 +359,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #04f5ff;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#february">
                         <h4 class="panel-title">
                             February
@@ -334,7 +372,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #eaff04;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#march">
                         <h4 class="panel-title">
                             March
@@ -347,7 +385,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid; background-color: #e90052;">
+                <div class="panel panel-default" style="padding: 5px; border-bottom: 1px solid;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#april">
                         <h4 class="panel-title">
                             April
@@ -360,7 +398,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" style="padding: 5px; border-radius: 0 0 4px 4px; background-color: #00FF87;">
+                <div class="panel panel-default" style="padding: 5px;">
                     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#may">
                         <h4 class="panel-title">
                             May
