--- a/table.html
+++ b/table.html
@@ -39,6 +39,23 @@
 						<a class="dropdown-item" href="#">Arsenal</a>
 					    <a class="dropdown-item" href="#">Bournemouth</a>
 					    <a class="dropdown-item" href="#">Burnley</a>
+					    <a class="dropdown-item" href="#">Chelsea</a>
+					    <a class="dropdown-item" href="#">Crystal Palace</a>
+					    <a class="dropdown-item" href="#">Everton</a>
+					    <a class="dropdown-item" href="#">Hull City</a>
+					    <a class="dropdown-item" href="#">Leicester City</a>
+					    <a class="dropdown-item" href="#">Liverpool</a>
+					    <a class="dropdown-item" href="#">Man City</a>
+					    <a class="dropdown-item" href="#">Man Utd</a>
+					    <a class="dropdown-item" href="#">Middelsbrough</a>
+					    <a class="dropdown-item" href="#">Southampton</a>
+					    <a class="dropdown-item" href="#">Stoke City</a>
+					    <a class="dropdown-item" href="#">Sunderland</a>
+					    <a class="dropdown-item" href="#">Swansea</a>
+					    <a class="dropdown-item" href="#">Tottehnham</a>
+					    <a class="dropdown-item" href="#">Watford</a>
+					    <a class="dropdown-item" href="#">West Brom</a>
+					    <a class="dropdown-item" href="#">West Ham</a>
 					</div>
 				</li>
 				<li class="nav-item">
