changes made to the home page

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 
 			
 			
-			<ul class="nav nav-tabs" role="tablist" style="margin-top: 30px;">
+			<ul id="home-content-nav" class="nav nav-tabs" role="tablist" style="margin-top: 30px;">
 				<li class="nav-item">
-					<a href="#home" class="nav-link active" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true" style="color: black;">Home</a>
+					<a href="#home" class="nav-link active" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Home</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="#history" class="nav-link" id="history-tab" role="tab" data-toggle="tab" aria-controls="history" style="color: black; background-color: blue;">History</a>
+					<a href="#history" class="nav-link" id="history-tab" role="tab" data-toggle="tab" aria-controls="history">History</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="#about" class="nav-link" id="about-tab" role="tab" data-toggle="tab" aria-controls="about">Previous Winners</a>
+					<a href="#previous-winners" class="nav-link" id="about-tab" role="tab" data-toggle="tab" aria-controls="previous-winners">Previous Winners</a>
 				</li>
 			</ul>
 
@@ -93,26 +93,26 @@
 					<p>History content</p>
 				</div>
 
-				<div role="tabpanel" class="tab-pane fade" id="about" aria-labelledby="about-tab">
+				<div role="tabpanel" class="tab-pane fade" id="previous-winners" aria-labelledby="about-tab">
 					<div class="row">
 						<div class="col-sm-6 col-lg-4">
-							<div class="card card-block">
+							<div class="card card-block text-xs-center" style="background-color: red;">
 								<h4 class="card-title">2016/2017</h4>
-								<img src="">
+								<img class="img-fluid" src="images/logos/man-utd.svg" style="width: 250px; height: 250px; margin: 0 auto;">
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-lg-4">
-							<div class="card card-block">
+							<div class="card card-block text-xs-center" style="background-color: lightblue;">
 								<h4 class="card-title">2016/2017</h4>
-								<img src="">
+								<img class="img-fluid" src="images/logos/man-city.svg" style="width: 250px; height: 250px;">
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-lg-4">
-							<div class="card card-block">
+							<div class="card card-block text-xs-center" style="background-color: blue;">
 								<h4 class="card-title">2016/2017</h4>
-								<img src="">
+								<img class="img-fluid" src="images/logos/chelsea.svg" style="width: 250px; height: 250px;">
 							</div>
 						</div>
 					</div>
@@ -218,6 +218,7 @@
 	
 	<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
