--- a/table.html
+++ b/table.html
@@ -70,7 +70,7 @@
 			<h2 style="padding-bottom: 30px;">League Table</h2>
 
 			<div class="table-responsive">
-				<table class="table table-striped">
+				<table id="league" class="table table-striped">
 					<thead>
 						<tr>
 							<th>Pos</th>
@@ -88,7 +88,7 @@
 					<tbody>
 						<tr>
 							<th scope="row">1</th>
-							<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span></td>
+							<td><span><img src="images/logos/man-city.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Manchester City</span><span id="short-team-name">MCI</span></td>
 							<td>3</td>
 							<td>3</td>
 							<td>0</td>
@@ -100,7 +100,7 @@
 						</tr>
 						<tr>
 							<th scope="row">2</th>
-							<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span></td>
+							<td><span><img src="images/logos/chelsea.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Chelsea</span><span id="short-team-name">CHE</span></td>
 							<td>3</td>
 							<td>3</td>
 							<td>0</td>
@@ -112,7 +112,7 @@
 						</tr>
 						<tr>
 							<th scope="row">3</th>
-							<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span></td>
+							<td><span><img src="images/logos/man-utd.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Manchester United</span><span id="short-team-name">MUN</span></td>
 							<td>3</td>
 							<td>3</td>
 							<td>0</td>
@@ -121,6 +121,210 @@
 							<td>1</td>
 							<td>5</td>
 							<td>9</td>
+						</tr>
+						<tr>
+							<th scope="row">4</th>
+							<td><span><img src="images/logos/everton.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Everton</span><span id="short-team-name">EVE</span></td>
+							<td>3</td>
+							<td>2</td>
+							<td>1</td>
+							<td>0</td>
+							<td>4</td>
+							<td>2</td>
+							<td>2</td>
+							<td>7</td>
+						</tr>
+						<tr>
+							<th scope="row">5</th>
+							<td><span><img src="images/logos/hull-city.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Hull City</span><span id="short-team-name">HUL</span></td>
+							<td>3</td>
+							<td>2</td>
+							<td>0</td>
+							<td>1</td>
+							<td>4</td>
+							<td>2</td>
+							<td>2</td>
+							<td>6</td>
+						</tr>
+						<tr>
+							<th scope="row">6</th>
+							<td><span><img src="images/logos/middlesbrough.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Middlesbrough</span><span id="short-team-name">MID</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>2</td>
+							<td>0</td>
+							<td>3</td>
+							<td>2</td>
+							<td>1</td>
+							<td>5</td>
+						</tr>
+						<tr>
+							<th scope="row">7</th>
+							<td><span><img src="images/logos/spurs.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Tottenham Hotspur</span><span id="short-team-name">TOT</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>2</td>
+							<td>0</td>
+							<td>3</td>
+							<td>2</td>
+							<td>1</td>
+							<td>5</td>
+						</tr>
+						<tr>
+							<th scope="row">8</th>
+							<td><span><img src="images/logos/arsenal.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Arsenal</span><span id="short-team-name">ARS</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>1</td>
+							<td>1</td>
+							<td>6</td>
+							<td>5</td>
+							<td>1</td>
+							<td>4</td>
+						</tr>
+						<tr>
+							<th scope="row">9</th>
+							<td><span><img src="images/logos/leicester.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Leicester City</span><span id="short-team-name">LEI</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>1</td>
+							<td>1</td>
+							<td>3</td>
+							<td>3</td>
+							<td>0</td>
+							<td>4</td>
+						</tr>
+						<tr>
+							<th scope="row">10</th>
+							<td><span><img src="images/logos/wba.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">West Bromwich Albion</span><span id="short-team-name">WBA</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>1</td>
+							<td>1</td>
+							<td>2</td>
+							<td>2</td>
+							<td>0</td>
+							<td>4</td>
+						</tr>
+						<tr>
+							<th scope="row">11</th>
+							<td><span><img src="images/logos/liverpool.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Liverpool</span><span id="short-team-name">LIV</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>1</td>
+							<td>1</td>
+							<td>5</td>
+							<td>6</td>
+							<td>-1</td>
+							<td>4</td>
+						</tr>
+						<tr>
+							<th scope="row">12</th>
+							<td><span><img src="images/logos/west-ham.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">West Ham United</span><span id="short-team-name">WHU</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>0</td>
+							<td>2</td>
+							<td>3</td>
+							<td>5</td>
+							<td>-2</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<th scope="row">13</th>
+							<td><span><img src="images/logos/burnley.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Burnley</span><span id="short-team-name">BUR</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>0</td>
+							<td>2</td>
+							<td>2</td>
+							<td>3</td>
+							<td>-2</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<th scope="row">14</th>
+							<td><span><img src="images/logos/swansea.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Swansea City</span><span id="short-team-name">SWA</span></td>
+							<td>3</td>
+							<td>1</td>
+							<td>0</td>
+							<td>2</td>
+							<td>2</td>
+							<td>3</td>
+							<td>-2</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<th scope="row">15</th>
+							<td><span><img src="images/logos/southampton.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Southampton</span><span id="short-team-name">SOU</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>2</td>
+							<td>1</td>
+							<td>2</td>
+							<td>4</td>
+							<td>-2</td>
+							<td>2</td>
+						</tr>
+						<tr>
+							<th scope="row">16</th>
+							<td><span><img src="images/logos/sunderland.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Sunderland</span><span id="short-team-name">SUN</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>3</td>
+							<td>5</td>
+							<td>-2</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<th scope="row">17</th>
+							<td><span><img src="images/logos/palace.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Crystal Palace</span><span id="short-team-name">CRY</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>1</td>
+							<td>3</td>
+							<td>-2</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<th scope="row">18</th>
+							<td><span><img src="images/logos/watford.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Watford</span><span id="short-team-name">WAT</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>3</td>
+							<td>6</td>
+							<td>-3</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<th scope="row">19</th>
+							<td><span><img src="images/logos/bournemouth.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Bournemouth</span><span id="short-team-name">BOU</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>2</td>
+							<td>5</td>
+							<td>-3</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<th scope="row">20</th>
+							<td><span><img src="images/logos/stoke-city.svg" style="width: 30px; height: 30px; "></span><span id="long-team-name">Stoke City</span><span id="short-team-name">STK</span></td>
+							<td>3</td>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>2</td>
+							<td>6</td>
+							<td>-4</td>
+							<td>1</td>
 						</tr>
 					</tbody>
 				</table>
